--- a/learning/requirements.deployment.txt
+++ b/learning/requirements.deployment.txt
@@ -1,6 +1,7 @@
+grpcio-tools==1.6.0
+Inject==3.3.1
 mecab-python3==0.7
 mojimoji==0.0.5
-mprpc==0.1.10
 mysqlclient==1.3.7
 numpy==1.11.1
 pandas==0.18.1
