--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.6",
     "enzyme": "^2.7.1",
+    "es6-promise": "^4.1.1",
     "is-empty": "^1.0.0",
     "jest-cli": "^19.0.2",
     "jquery": "^3.1.1",
