--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "copy-to-clipboard": "^3.0.6",
     "enzyme": "^2.7.1",
     "es6-promise": "^4.1.1",
+    "formik": "^0.9.2",
     "imagesloaded": "^4.1.3",
     "is-empty": "^1.0.0",
     "jest-cli": "^19.0.2",
     "jquery": "^3.1.1",
+    "js-cookie": "^2.1.4",
     "json2csv": "^3.7.3",
     "lodash": "^4.17.2",
     "object-to-formdata": "^1.0.12",
@@ -80,7 +82,8 @@
     "styled-components": "^2.1.1",
     "toastr": "^2.1.2",
     "uuid": "^3.0.1",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "yup": "^0.22.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
