--- a/learning/config/config.yml.example
+++ b/learning/config/config.yml.example
@@ -5,7 +5,7 @@ default: &default
     name: donusagi_bot
     user: root
     password: ""
-  dic: dict/custom.dic
+  dicdir: /usr/local/lib/mecab/dic/ipadic
 
 development:
   <<: *default
@@ -18,7 +18,7 @@ test:
     name: donusagi_bot_test
     user: root
     password: ""
-  dic: dict/custom.dic
+  dicdir: /usr/local/lib/mecab/dic/ipadic
 
 production:
   <<: *default
