--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     ]
   },
   "dependencies": {
+    "@rails/webpacker": "^3.0.2",
     "axios": "^0.15.3",
     "babel-jest": "^19.0.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-inline-environment-variables": "^0.0.2",
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
@@ -49,6 +51,7 @@
     "browserify": "^13.1.1",
     "bytes": "^2.5.0",
     "classnames": "^2.2.5",
+    "coffeescript": "1.12.7",
     "copy-to-clipboard": "^3.0.6",
     "enzyme": "^2.7.1",
     "es6-promise": "^4.1.1",
@@ -91,6 +94,7 @@
     "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "5.0.3",
-    "eslint-plugin-react": "^7.1.0"
+    "eslint-plugin-react": "^7.1.0",
+    "webpack-dev-server": "^2.9.2"
   }
 }
