--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,11 +29,8 @@ services:
     command: bundle exec guard
     ports: []
     stdin_open: false
-    depends_on:
-      - learning_test
     environment:
       - DB_HOST=db
-      - RPC_HOST=learning_test
       - RAILS_ENV=test
   db:
     image: mysql
@@ -60,19 +57,14 @@ services:
       - .:/usr/src/app
     volumes_from:
       - app_data
-  learning: &learning_base
+  learning:
     build: ./learning
     tty: true
-    command: python ./myope_server.py --host '0.0.0.0'
+    command: python ./myope_server.py
     volumes:
       - ./learning:/usr/src/app
-    ports:
-      - 6000:6000
     depends_on:
       - db
-  learning_test:
-    <<: *learning_base
-    command: python ./myope_server.py --host '0.0.0.0' test
 
 volumes:
   db:
