--- a/learning/config/config.yml.example
+++ b/learning/config/config.yml.example
@@ -6,6 +6,8 @@ default: &default
     user: root
     password: ""
   dicdir: /usr/local/lib/mecab/dic/ipadic
+  # dicdir: /var/lib/mecab/dic/debian
+  # dicdir: /usr/lib/mecab/dic/mecab-ipadic-neologd
 
 development:
   <<: *default
@@ -18,7 +20,6 @@ test:
     name: donusagi_bot_test
     user: root
     password: ""
-  dicdir: /usr/local/lib/mecab/dic/ipadic
 
 production:
   <<: *default
