--- a/learning/requirements.txt
+++ b/learning/requirements.txt
@@ -1,3 +1,4 @@
+gensim==2.3.0
 grpcio-tools==1.6.0
 Inject==3.3.1
 mecab-python3==0.7
@@ -5,6 +6,7 @@ mojimoji==0.0.5
 mysqlclient==1.3.7
 numpy==1.11.1
 pandas==0.18.1
+pyemd==0.4.4
 PyYAML==3.11
 scikit-learn==0.18.1
 scipy==0.18.0
