バイナリかどうかをconfigで設定できるようにする

--- a/learning/config/config.yml.example
+++ b/learning/config/config.yml.example
@@ -9,6 +9,7 @@ default: &default
   # dicdir: /var/lib/mecab/dic/debian
   # dicdir: /usr/lib/mecab/dic/mecab-ipadic-neologd
   word2vec_model_name: entity_vector.model.bin
+  word2vec_model_is_binaly: True
 
 development:
   <<: *default
