--- a/ansible/roles/nginx/templates/my-ope-https.conf
+++ b/ansible/roles/nginx/templates/my-ope-https.conf
@@ -8,7 +8,7 @@ upstream unicorn {
 
 server {
   listen       443;
-  server_name  donusagi-bot;
+  server_name  staging.my-ope.net;
   root /var/www/donusagi-bot/public;
 
   ssl on;
@@ -28,6 +28,33 @@ server {
     proxy_redirect http:// https://;
     if (!-f $request_filename) {
       proxy_pass http://unicorn;
+      break;
+    }
+  }
+}
+
+server {
+  listen       443;
+  server_name  staging-botapi.my-ope.net;
+  root /var/www/donusagi-bot/skype-bot;
+
+  ssl on;
+  ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:RSA+3DES:!ADH:!AECDH:!MD5;
+  ssl_prefer_server_ciphers on;
+  ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+  ssl_certificate     /etc/nginx/ssl/server.cert;
+  ssl_certificate_key /etc/nginx/ssl/server.key;
+
+  location / {
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Host   $host;
+    proxy_set_header X-Forwarded-Server $host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto  https;
+    proxy_redirect http:// https://;
+    if (!-f $request_filename) {
+      proxy_pass http://localhost:3978;
       break;
     }
   }
