Update nginx config

--- a/ansible/roles/nginx/templates/my-ope.conf
+++ b/ansible/roles/nginx/templates/my-ope.conf
@@ -8,7 +8,7 @@ upstream unicorn {
 
 server {
   listen       80;
-  server_name  donusagi-bot;
+  server_name  app.my-ope.net;
   root /var/www/donusagi-bot/public;
 
   location / {
@@ -17,6 +17,22 @@ server {
     proxy_set_header Host $http_host;
     if (!-f $request_filename) {
       proxy_pass http://unicorn;
+      break;
+    }
+  }
+}
+
+server {
+  listen       80;
+  server_name  app-botapi.my-ope.net;
+  root /var/www/donusagi-bot/skype-bot;
+
+  location / {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    if (!-f $request_filename) {
+      proxy_pass http://localhost:3978;
       break;
     }
   }
