--- a/bot-framework/package.json
+++ b/bot-framework/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.17.0",
     "botbuilder": "^3.11.0",
+    "botbuilder-linebot-connector": "^1.1.1",
     "restify": "^6.2.3"
   }
 }
