--- a/bot-framework/package.json
+++ b/bot-framework/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@line/bot-sdk": "^5.0.1",
     "axios": "^0.17.0",
     "botbuilder": "^3.11.0",
-    "botbuilder-linebot-connector": "^1.1.1",
-    "restify": "^6.2.3"
+    "lodash.get": "^4.4.2",
+    "lodash.isplainobject": "^4.0.6",
+    "restify": "^6.2.3",
+    "restify-namespace": "^0.1.1"
   }
 }
