--- a/bot-framework/package.json
+++ b/bot-framework/package.json
@@ -14,6 +14,7 @@
     "botbuilder": "^3.11.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
+    "lodash.includes": "^4.3.0",
     "lodash.isplainobject": "^4.0.6",
     "restify": "^6.2.3",
     "restify-namespace": "^0.1.1"
