--- a/bot-framework/package.json
+++ b/bot-framework/package.json
@@ -15,6 +15,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.isplainobject": "^4.0.6",
+    "request": "^2.83.0",
     "restify": "^6.2.3",
     "restify-namespace": "^0.1.1"
   }
