--- a/learning/prototype/requirements.txt
+++ b/learning/prototype/requirements.txt
@@ -2,9 +2,11 @@ alembic==0.8.7
 appnope==0.1.0
 bleach==1.5.0
 cycler==0.10.0
+Cython==0.27.3 --install-option="--no-cython-compile"
 dataset==0.6.4
 decorator==4.0.10
 entrypoints==0.2.2
+fasttext==0.8.3
 gevent==1.1.2
 greenlet==0.4.10
 grpcio-tools==1.6.0
