--- a/ansible/roles/nginx/templates/my-ope.conf
+++ b/ansible/roles/nginx/templates/my-ope.conf
@@ -8,7 +8,7 @@ upstream unicorn {
 
 server {
   listen       80;
-  server_name  app.my-ope.net;
+  server_name  app-new.my-ope.net;
   root /var/www/donusagi-bot/public;
 
   location / {
