--- a/learning/requirements.txt
+++ b/learning/requirements.txt
@@ -4,6 +4,7 @@ injector==0.13.3
 mecab-python3==0.7
 mojimoji==0.0.5
 mysqlclient==1.3.7
+MySQL-python==1.2.5
 numpy==1.11.1
 pandas==0.18.1
 pyemd==0.4.4
