Add MYOPE_API_URL env variable

--- a/ansible/web-servers.yml
+++ b/ansible/web-servers.yml
@@ -7,6 +7,9 @@
     python_version: 3.5.2
     node_version: 6.9.1
     cert_fqdn: staging.my-ope.net
+    myope_api_url:
+      production: https://app.my-ope.net
+      staging: https://staging.my-ope.net
   vars_files:
     - private.yml
   roles:
