--- a/ansible/roles/awslogs/templates/awslogs.conf
+++ b/ansible/roles/awslogs/templates/awslogs.conf
@@ -156,3 +156,11 @@ buffer_duration = 5000
 log_stream_name = {instance_id}
 initial_position = start_of_file
 log_group_name = /var/www/donusagi-bot/shared/learning/logs/application.log
+
+[/tmp/supervisord.log]
+datetime_format = %b %d %H:%M:%S
+file = /tmp/supervisord.log
+buffer_duration = 5000
+log_stream_name = {instance_id}
+initial_position = start_of_file
+log_group_name = /tmp/supervisord.log
