--- a/package.json
+++ b/package.json
@@ -87,6 +87,9 @@
     "styled-components": "^2.1.1",
     "toastr": "^2.1.2",
     "uuid": "^3.0.1",
+    "vue": "^2.5.13",
+    "vue-loader": "^13.6.1",
+    "vue-template-compiler": "^2.5.13",
     "watchify": "^3.7.0",
     "yup": "^0.22.0"
   },
