--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "vue": "^2.5.13",
     "vue-loader": "^13.6.1",
     "vue-router": "^3.0.1",
+    "vue-sweetalert": "^0.1.18",
     "vue-template-compiler": "^2.5.13",
     "vuex": "^3.0.1",
     "watchify": "^3.7.0",
