--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
+    "sanitize-html": "^1.17.0",
     "sinon": "^1.17.7",
     "styled-components": "^2.1.1",
     "toastr": "^2.1.2",
