--- a/ansible/roles/users/tasks/main.yml
+++ b/ansible/roles/users/tasks/main.yml
@@ -11,6 +11,7 @@
     - public_keys/a.harada
     - public_keys/s.tachibana
     - public_keys/k.yamagata
+    - public_keys/y.miyata
 
 - user:
     name: a.harada
