--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "imagesloaded": "^4.1.3",
     "is-empty": "^1.0.0",
     "jest-cli": "^19.0.2",
+    "joi-browser": "^13.0.1",
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.4",
     "json2csv": "^3.7.3",
