--- a/learning/fixtures/synonyms.yaml
+++ b/learning/fixtures/synonyms.yaml
@@ -9,6 +9,26 @@
   - よね
   - ね
   - ""
+申し込み:
+  - 申込
+  - 申込み
+申込み:
+  - 申し込み
+  - 申込
+壊れた:
+  - 調子が悪い
+  - おかしい
+  - できない
+調子が悪い:
+  - 壊れた
+  - おかしい
+おかしい:
+  - 間違っている
+  - 調子が悪い
+  - 変な
+権限:
+  - 許可
+  - できる
 パソコン:
   - PC
   - ノートPC
